# wecook

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  package.xml  wecook.rosinstall
demos/chicken_pasta/: chicken_pasta.py  chicken_pasta_sim.py
demos/feeding/: domain.pddl  feeding.py  feeding_sim.py  problem.pddl
demos/feeding_planning/: domain.pddl
demos/fruit_jelly/: fruit_jelly.py  fruit_jelly_sim.py  simpler_fruit_jelly_common.py  simpler_fruit_jelly_real.py  simpler_fruit_jelly_sim.py
demos/ham_sandwich/: ham_sandwich.py  ham_sandwich_sim.py
demos/handover0/: mass_verde_177.py
demos/heat0/: rissois_vegetarianos_6159.py
demos/holdingcut0/: mass_verde_2777.py
demos/roll0/: rissois_vegetarianos_5214.py
demos/simplest/: simplest.py  simplest_sim.py
demos/transfer0/: mass_verde_3505.py
demos/transferstir0/: rissois_vegetarianos_1273.py
docs/: instructions.md  mainpage.md
include/ai/sensor/: Sensor.h
include/ai/trajectory/: HauserPath.h
include/wecook/: Action.h  ActionNode.h  ActionPlanner.h  Agent.h  AngularDeltaMotionNode.h  AngularDeltaMotionPlanner.h  ConfMotionNode.h  ConfMotionPlanner.h  ConfPreCondition.h  ConnMetadata.h  ConnMotionNode.h  ConnMotionPlanner.h  ConnPreCondition.h  Container.h  ContainingMap.h  DeltaMotionNode.h  DeltaMotionPlanner.h  FakeMotionNode.h  FakeMotionPlanner.h  GrabMotionNode.h  GrabMotionPlanner.h  GrabPreCondition.h  GravityMotionNode.h  GravityMotionPlanner.h  Human.h  IKMotionNode.h  IKMotionPlanner.h  LinearDeltaMotionNode.h  LinearDeltaMotionPlanner.h  MetaActuateInfo.h  MotionNode.h  MotionPlanner.h  Object.h  ObjectMgr.h  PreCondition.h  PrimitiveActionExecutor.h  PrimitiveActionNode.h  PrimitiveActuateNode.h  PrimitiveEngageNode.h  PrimitiveGrabNode.h  (+23 more)
include/wecook/Agents/: Agent.h  Human.h  Robot.h
include/wecook/LowLevelMotionNodes/: ConfMotionNode.h  ConnMotionNode.h  FakeMotionNode.h  GrabMotionNode.h  LinearDeltaMotionNode.h  MotionNode.h  (+3 more)
launch/: run_wecook_demo_real.launch  run_wecook_demo_sim.launch  test_apriltag_setup.launch
msg/: ActionMsg.msg  AgentMsg.msg  ContainingMsg.msg  ObjectMsg.msg  SceneMsg.msg  TagMsg.msg  TaskMsg.msg
scripts/: demo1.py  ex_task1.py  ex_task2.py  fruit_jelly.py  mass_verde_177.py  mass_verde_2777.py  mass_verde_3505.py  rissois_vegetarianos_1273.py  rissois_vegetarianos_5214.py  rissois_vegetarianos_6159.py  trajectory_plotting.py
src/: ActionPlanner.cpp  Agent.cpp  AngularDeltaMotionPlanner.cpp  CMakeLists.txt  ConfMotionNode.cpp  ConfMotionPlanner.cpp  ConnMotionNode.cpp  ConnMotionPlanner.cpp  Container.cpp  ContainingMap.cpp  DeltaMotionNode.cpp  DeltaMotionPlanner.cpp  FakeMotionPlanner.cpp  GrabMotionNode.cpp  GrabMotionPlanner.cpp  GravityMotionPlanner.cpp  Human.cpp  IKMotionNode.cpp  IKMotionPlanner.cpp  LinearDeltaMotionNode.cpp  LinearDeltaMotionPlanner.cpp  ObjectMgr.cpp  PrimitiveActionExecutor.cpp  PrimitiveActionNode.cpp  PrimitiveActuateNode.cpp  PrimitiveEngageNode.cpp  PrimitiveGrabNode.cpp  PrimitiveGraspNode.cpp  PrimitiveMoveToNode.cpp  PrimitivePlaceNode.cpp  PrimitivePredefinedNode.cpp  PrimitiveTaskGraph.cpp  RelativeIKMotionNode.cpp  Robot.cpp  Robots.cpp  TSRIKNode.cpp  TSRIKPlanner.cpp  TSRMotionNode.cpp  TSRMotionPlanner.cpp  TSRMotionwithConstraintNode.cpp  (+6 more)
src/ai/: CMakeLists.txt
src/ai/planner/smoother/: CMakeLists.txt  SimpleDynamicPath.cpp  SimpleDynamicPath.h  SmootherHelpers.cpp  SmootherUtil.cpp  SmootherUtil.h
src/ai/planner/taskPlanner/: CMakeLists.txt  LogicFormula.cpp  PDDLDomain.cpp  PDDLParser.cpp  PDDLProblem.cpp  pddl_parser.py
src/ai/sensor/: CMakeLists.txt  Sensor.cpp
src/ai/sensor/camera/: Camera.cpp
src/ai/sensor/camera/kinect/: Kinect.cpp  SimKinect.cpp
src/ai/trajectory/: CMakeLists.txt  HauserPath.cpp
src/planner/: SimpleDynamicPath.cpp  SmootherHelpers.cpp
src/wecook/: ActionPlanner.cpp  AngularDeltaMotionNode.cpp  CMakeLists.txt  ConfMotionNode.cpp  ConnMotionNode.cpp  Container.cpp  DeltaMotionNode.cpp  FakeMotionNode.cpp  GrabMotionNode.cpp  GravityMotionNode.cpp  Human.cpp  IKMotionNode.cpp  LinearDeltaMotionNode.cpp  ObjectMgr.cpp  PrimitiveActionNode.cpp  PrimitiveActuateNode.cpp  PrimitiveEngageNode.cpp  PrimitiveGraspNode.cpp  PrimitivePlaceNode.cpp  RelativeIKMotionNode.cpp  Robot.cpp  TSRIKNode.cpp  TSRMotionNode.cpp  TSRMotionwithConstraintNode.cpp  TaskExecutorThread.cpp  TaskGraph.cpp  TaskManager.cpp  World.cpp  main.cpp
src/wecook/Agents/: Human.cpp  Robot.cpp
src/wecook/LowLevelMotionNodes/: ConfMotionNode.cpp  ConnMotionNode.cpp  FakeMotionNode.cpp  GrabMotionNode.cpp  LinearDeltaMotionNode.cpp  RelativeIKMotionNode.cpp  TSRMotionNode.cpp  TSRMotionwithConstraintNode.cpp
src/wecook/PrimitiveTaskGraph/: PrimitiveActionExecutor.cpp  PrimitiveActionNode.cpp  PrimitiveActuateNode.cpp  PrimitiveEngageNode.cpp  PrimitiveGraspNode.cpp  PrimitivePlaceNode.cpp  PrimitiveTaskGraph.cpp
src/wecook/TaskGraph/: ActionPlanner.cpp  TaskExecutorThread.cpp  TaskGraph.cpp
src/wecook/applications/: CMakeLists.txt
src/wecook/applications/human_rrt/: CMakeLists.txt
src/wecook/applications/human_rrt/src/: main.cpp
src/wecook/applications/playbackTrajectory/: CMakeLists.txt
src/wecook/applications/playbackTrajectory/src/: main.cpp
src/wecook/applications/playback_trajectory/: CMakeLists.txt
src/wecook/applications/playback_trajectory/src/: main.cpp
src/wecook/applications/simple_human_trajectory/: CMakeLists.txt
src/wecook/applications/simple_human_trajectory/src/: main.cpp
src/wecook/applications/simple_trajectory/: CMakeLists.txt
src/wecook/applications/simple_trajectory/src/: main.cpp
src/wecook/applications/test_apriltag/: CMakeLists.txt
src/wecook/applications/test_apriltag/src/: main.cpp
src/wecook/applications/test_apriltag_transforms/: CMakeLists.txt
src/wecook/applications/test_apriltag_transforms/src/: main.cpp
src/wecook/applications/test_kinect/: CMakeLists.txt
src/wecook/applications/test_kinect/src/: main.cpp
src/wecook/applications/test_tsr_motion_node/: CMakeLists.txt
src/wecook/applications/test_tsr_motion_node/src/: main.cpp
(+28 files in other folders)
